SET(PROJECT_NAME diag_server)

SET(THREADS_PREFER_PTHREAD_FLAG ON)

PROJECT(${PROJECT_NAME})
CMAKE_MINIMUM_REQUIRED( VERSION 3.10 )

MESSAGE(${PROJECT_NAME})
ADD_EXECUTABLE(diag_server diag_app.c)
FIND_PACKAGE(Threads REQUIRED)
TARGET_LINK_LIBRARIES(diag_server PRIVATE Threads::Threads)


#MESSAGE(FATAL_ERROR "Fatal error occured!")
